# WTranscriber

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.builder  README.md  SECURITY.md  WTranscriber.code-workspace  dev.config.ts  index.html  justfile  knip.json  package.json  playwright.config.ts  release.config.json  tsconfig.json  tsconfig.scripts.json  vite.config.ts  vitest.config.ts
.agents/skills/error-resolver/patterns/: database.md  network.md  nodejs.md  react.md
.agents/skills/playwright-skill/: SKILL.md
.agents/skills/tauri/: SKILL.md  metadata.json
.cargo/: audit.toml  config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: check.yml
.opencode/skills/error-resolver/: SKILL.md
.opencode/skills/playwright-skill/: API_REFERENCE.md
.pi/agents/: doctor.md  wt-coder.md  wt-committer.md  wt-diagnose.md  wt-docs-updater.md  wt-edit.md  wt-installer.md  wt-investigate.md  wt-monitor.md  wt-observer.md  wt-researcher.md  wt-runner.md  wt-scout.md  wt-ship.md  wt-tester.md  wt-triage.md
.pi/chains/: install-and-test.chain.md
docker/: Dockerfile.builder  Dockerfile.deb  build-deb.sh
docs/: README.md  agents.md  android.md  architecture.md  asr-pipeline-v2.md  asr-pipeline.md  dev-loop.md  quality.md  release.md  rust-build-speed.md  tauri-debug.md  technical-debt.md  tmp.md  verification.md
docs/plans/: README.md
docs/plans/active/: asr-model-refresh.md
docs/plans/completed/: asr-model-refresh.md
e2e/: wtranscriber.spec.ts
scripts/: agent-watchdog.ps1  android-build.ps1  android-emu.mjs  android-emu.ts  android-install.ts  android-native-watch.ts  android-wt.sh  android.mjs  bootstrap-linux.sh  bootstrap-windows.ps1  build-sherpa-cuda.ps1  cdp.mjs  cdp.ts  check-changed.ts  clean-temp.mjs  clean-temp.ts  clear-dev-logs.ts  dev-bootstrap.ps1  dev-tail.ts  dev-vital.ts  diarize.py  doctor.ts  ensure-cargo-tool.ts  error-monitor.mjs  install-android-prebuilts.ps1  install-cudnn.ps1  install-dev.ts  install-nemo-deps.ps1  install-nemo-deps.sh  install-sherpa-cuda.ps1  install-windows-runtime.ps1  lint-docs.ts  lint-vue.mjs  lint-vue.ts  nsis-hooks.nsh  observer.mjs  parallel.mjs  parallel.test.ts  parallel.ts  patch-android-signing.mjs  (+11 more)
shared/: identity.rs
src/: App.vue  api.ts  main.ts  schemas.ts  types.ts
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/android-overlay/java/com/asolopovas/wtranscriber/: MainActivity.kt  TranscriptionService.kt
src-tauri/android-overlay/res/values/: strings.xml
src-tauri/android-overlay/res/xml/: file_paths.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  api.rs  browser.rs  commands.rs  config.rs  constants.rs  error.rs  essentials.rs  fs_utils.rs  lang_id.rs  lib.rs  logfile.rs  main.rs  models.rs  paths.rs  process.rs  progress.rs  runtime_install.rs
src-tauri/src/audio/: cache.rs  decode.rs  ffmpeg.rs  meta.rs  mod.rs  wav.rs
src-tauri/src/audio_toolkit/: constants.rs  mod.rs  resampler.rs  stream.rs  wav.rs
src-tauri/src/audio_toolkit/vad/: mod.rs  model.rs  regions.rs  silero.rs  smoothed.rs
src-tauri/src/commands/: audio_files.rs  config.rs  diagnostics.rs  file_names.rs  files.rs  llm.rs  mod.rs  models.rs  system.rs  transcribe.rs
src-tauri/src/diarizer/: mod.rs  nemo.rs  sherpa.rs  sortformer_onnx.rs
src-tauri/src/engine/: canary.rs  chunk.rs  mod.rs  nemo_ctc.rs  processor.rs  qwen3_asr.rs  recognizer.rs  runtime.rs  sherpa.rs  transducer.rs  whisper.rs  whisper_cpp.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/models/: catalog.rs  catalog_data.rs  download.rs  manager.rs  mod.rs
src-tauri/src/namer/: mod.rs
src-tauri/src/runtimes/: cudnn.rs  dependencies.rs  inproc_cuda.rs  llama.rs  mod.rs  sherpa.rs
src-tauri/src/transcriber/: cache.rs  dedup.rs  export.rs  format.rs  job.rs  mod.rs  partial.rs  transcript.rs
src-tauri/src/transcriber/job/: diarize.rs  finalize.rs  postprocess.rs  slab.rs  streaming.rs  trim.rs
src-tauri/src/transcriber/transcript/: lang.rs  mod.rs  words.rs
src/components/: AppHeader.vue  BottomNav.vue  ConfigPanel.vue  DownloadCircle.vue  FileList.vue  History.vue  LogViewer.vue  ModelManager.vue  ModelTable.vue  Recorder.vue  Settings.vue  SetupGate.test.ts  SetupGate.vue  SlidingPanel.vue  StatusStrip.vue  StorageGate.vue  TranscriptPanel.vue  nav-tabs.ts
src/components/dialogs/: ExportDialog.vue  RedoDiarizeDialog.test.ts  RedoDiarizeDialog.vue  RenameDialog.vue  TrimDialog.vue
src/components/icons/: CancelIcon.vue  LogIcon.vue  SaveIcon.vue  SettingsIcon.vue  Spinner.vue  TranscribeIcon.vue
src/components/ui/: Button.vue  Card.vue  Checkbox.vue  DefRow.vue  ErrorBanner.vue  FormField.vue  Icon.vue  MenuItem.vue  Modal.vue  PillButton.vue  SaveIndicator.vue  StatusPill.vue  Toggle.vue
src/composables/: format.ts  records.ts  useDebouncedSave.test.ts  useDebouncedSave.ts  useEssentials.ts  useFileSelection.test.ts  useFileSelection.ts  useMediaQuery.ts  usePanelResize.ts
src/styles/: fields.ts  tailwind.css
src/utils/: audio.test.ts  audio.ts  base64.test.ts  base64.ts  clipboard.ts  error-bridge.ts  format.test.ts  format.ts  models.test.ts  models.ts  records.test.ts
workers/whisper-cuda-worker/: Cargo.toml
workers/whisper-cuda-worker/src/: main.rs
xtask/: Cargo.toml
xtask/src/: android.rs  builder.rs  bump.rs  check.rs  cuda_workers.rs  dev.rs  main.rs  publish.rs  release.rs  release_stable.rs  util.rs
xtask/src/android/: adb.rs  build.rs  dev.rs  lldb.rs  logs.rs  mod.rs  patch.rs  paths.rs  proc.rs
xtask/src/release/: artifacts.rs  builders.rs  config.rs  mod.rs  windows_vm.rs
