[package]
name = "wtranscriber"
version = "0.1.0"
description = "Audio transcription desktop app"
authors = ["asolopovas"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/asolopovas/WTranscriber"
publish = false
default-run = "wtranscriber"

[lib]
name = "wtranscriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wtranscriber"
path = "src/main.rs"

[[bin]]
name = "wt"
path = "src/bin/wt.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
which = "7"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
incremental = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
large_stack_frames = "allow"
