[package]
name = "wtranscriber"
version = "0.1.0"
description = "Audio transcription desktop app"
authors = ["asolopovas"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/asolopovas/WTranscriber"
publish = false
default-run = "wtranscriber"

[features]
default = ["cuda"]
sherpa-static = ["sherpa-onnx/static"]
cuda = ["sherpa-onnx/shared"]

[lib]
name = "wtranscriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wtranscriber"
path = "src/main.rs"

[[bin]]
name = "wt"
path = "src/bin/wt.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
which = "8"
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
tempfile = "3"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls", "http2"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
rubato = "0.16"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
base64 = "0.22"
byteorder = "1.5"
sherpa-onnx = { version = "1.13", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
codegen-units = 16
lto = false
incremental = true
opt-level = 3
panic = "abort"
strip = "debuginfo"

[profile.dev]
incremental = true
debug = "line-tables-only"
split-debuginfo = "unpacked"
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
large_stack_frames = "allow"
