[package]
name = "wtranscriber"
version = "0.1.10"
description = "Audio transcription desktop app"
authors = ["asolopovas"]
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/asolopovas/WTranscriber"
publish = false
default-run = "wtranscriber"

[features]
default = []
sherpa-shared = ["sherpa-onnx/shared"]
sherpa-static = ["sherpa-onnx/static"]
cuda = ["sherpa-onnx/shared", "parakeet-rs/cuda", "whisper-rs/cuda"]
directml = ["sherpa-onnx/shared", "parakeet-rs/directml", "parakeet-rs/load-dynamic", "ort/directml", "ort/load-dynamic"]
android = ["sherpa-onnx/shared", "ort/load-dynamic"]

[lib]
name = "wtranscriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wtranscriber"
path = "src/main.rs"

[[bin]]
name = "wt"
path = "src/bin/wt.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
which = "8"
sha2 = "0.11"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
rubato = "2"
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
opus-decoder = "0.1"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
base64 = "0.22"
byteorder = "1.5"
sherpa-onnx = { version = "1.13", default-features = false }

[patch.crates-io]
symphonia-format-isomp4 = { path = "vendor/symphonia-format-isomp4" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(not(target_os = "ios"))'.dependencies]
parakeet-rs = { version = "0.3", default-features = false, features = ["sortformer", "ort-defaults"] }
whisper-rs = { version = "0.16", default-features = false }
ort = { version = "=2.0.0-rc.12", default-features = false }
ndarray = "0.16"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"

[profile.release]
codegen-units = 16
lto = false
opt-level = 3
panic = "abort"
strip = "debuginfo"

[profile.dev]
incremental = true
debug = "line-tables-only"
split-debuginfo = "unpacked"
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
large_stack_frames = "allow"
