[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.dev]
codegen-units = 256
incremental = true

[profile.release]
codegen-units = 16
lto = false
