[package]
name = "whisper-cuda-worker"
version = "0.1.9"
edition = "2024"
rust-version = "1.88"
publish = false

[features]
default = []
cuda = ["whisper-rs/cuda"]

[[bin]]
name = "wt-whisper-cuda-worker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.16", default-features = false }
